--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -7,6 +7,8 @@
 // 
 // https://caniuse.com/?search=scroll-padding
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
+
 html {
     scroll-padding-top: 4.5rem;
 }
