--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -3,7 +3,7 @@
 // 
 
 .masthead {
-    background-color: $gray-100;
+    background-color: $body-bg;
     // Set top padding to 5rem plus the height of the fixed navbar
     padding-top: 5rem + 4.5rem;
     padding-bottom: 5rem;
