--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -29,7 +29,7 @@ html(lang='en')
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top.shadow-sm
             .container.px-5
-                a.navbar-brand.fw-bold(href='#page-top') Reelshop
+                a.navbar-brand.fw-bold(href='#page-top') Firstwave
                 button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     | Menu
                     i.bi-list
@@ -51,25 +51,21 @@ html(lang='en')
                     .col-lg-6
                         // Mashead text and app badges
                         .mb-5.mb-lg-0.text-center.text-lg-start
-                            h1.display-1.lh-1.mb-3 Make shopping easier.
-                            p.lead.fw-normal.text-muted.mb-5 Do exclusive Shopping in a virtual shop and enjoy good deals of new age shopping.
+                            h1.display-5.lh-5.mb-3 API infrastructure for e-commerce companies in Africa.
+                            p.lead.fw-normal.text-muted.mb-5 We help build API infrastructure to help e-commerce companies manage their transactions refund policy, post product compensation, generation of transaction receipt while also handling the logistics of there operations.
                             .d-flex.flex-column.flex-lg-row.align-items-center
-                                a.me-lg-3.mb-4.mb-lg-0(href='#!')
-                                    img.app-badge(src='assets/img/google-play-badge.svg', alt='...')
-                                a(href='#!')
-                                    img.app-badge(src='assets/img/app-store-badge.svg', alt='...')
                     .col-lg-6
                         // Masthead device mockup feature
                         .masthead-device-mockup
-                            img(src="assets/img/store.gif" style="max-width: 100%; height: 100%; object-fit:cover;")
+                            img(src="assets/img/click.gif" style="max-width: 100%; height: 100%; object-fit:cover;")
 
         // Quote/testimonial aside
         aside.text-center.bg-gradient-primary-to-secondary
             .container.px-5
                 .row.gx-5.justify-content-center
                     .col-xl-8
-                        .h2.fs-1.text-white.mb-4 "An intuitive solution to a common E-commerce problem that we all face, wrapped up in a single app!"
-                        h1(style="font-family: 'Inter', sans-serif; font-size:45px; color:#fff; margin:4rem 0 0 0") Reelshop
+                        .h2.fs-1.text-white.mb-4 "An intuitive solution to a common E-commerce problem that we all face, wrapped up in a single API!"
+                        h1(style="font-family: 'Inter', sans-serif; font-size:45px; color:#fff; margin:4rem 0 0 0") Firstwave
 
         // App features section
         section#features
@@ -82,14 +78,14 @@ html(lang='en')
                                     // Feature item
                                     .text-center
                                         i.bi-phone.icon-feature.text-gradient.d-block.mb-3
-                                        h3.font-alt Augmented Reality
-                                        p.text-muted.mb-0 We leverage cutting edge technology to bring you the best <br /> E-commerce experience.
+                                        h3.font-alt Seamless
+                                        p.text-muted.mb-0 We take away all the headaches associated with transaction and refund policy with just a simple API call
                                 .col-md-6.mb-5
                                     // Feature item
                                     .text-center
                                         i.bi-camera.icon-feature.text-gradient.d-block.mb-3
                                         h3.font-alt Flexible Use
-                                        p.text-muted.mb-0 Easy to use, navigate and explore bringing you a very nice user experience.
+                                        p.text-muted.mb-0 Easy to use and interact with through our real time chatbot and webhooks 
                             .row
                                 .col-md-6.mb-5.mb-md-0
                                     // Feature item
@@ -124,11 +120,11 @@ html(lang='en')
             .container.px-5
                 .row.gx-5.align-items-center.justify-content-center.justify-content-lg-between
                     .col-12.col-lg-5
-                        h2.display-4.lh-1.mb-4 Enter a new age of shopping
-                        p.lead.fw-normal.text-muted.mb-5.mb-lg-0 Reelshop gives you the most realistic experience there is while shopping on your device,
-                            from giving you the ability to walk around stores and marketplace places with augmented Reality
-                            to giving you the ability to interact directly with products through 3D previews of the products, Reelshop was designed
-                            to give you the best shopping experience there is out there. 
+                        h2.display-4.lh-1.mb-4 Enter a new age of e-commerce transaction
+                        p.lead.fw-normal.text-muted.mb-5.mb-lg-0 Firstwave was created to tackle what we like to call the 3 Ds of e-commerce transaction namely
+                            from distrust, dissapointment and disbelief with our services, customers and vendors can be rest assured that both their interests are safe guarded
+                            to when making online transactions by making payments directly to us to track the current progress of transaction and be rest assured that payment
+                            to or a refund is only made when certain criterias tailored to the transaction are met.
                     .col-sm-8.col-md-6
                         .px-5.px-sm-0
                             img.img-fluid.rounded-circle(src='assets/img/virtual.gif', alt='...')
@@ -138,26 +134,24 @@ html(lang='en')
             .cta-content
                 .container.px-5
                     h2.text-white.display-1.lh-1.mb-4
-                        | Stop waiting.
+                        | Stop loosing money.
                         br
-                        | Start shopping.
-                    a.btn.btn-outline-light.py-3.px-4.rounded-pill(href='https://startbootstrap.com/theme/new-age', target='_blank') Download for free
+                        | Stop loosing products.
+                        br
+                        | Start using us.
+                    a.btn.btn-outline-light.py-3.px-4.rounded-pill()(data-bs-toggle='modal', data-bs-target='#feedbackModal') Get started for free
 
         // App badge section
         section#download.bg-gradient-primary-to-secondary
             .container.px-5
-                h2.text-center.text-white.font-alt.mb-4 Get the app now!
+                h2.text-center.text-white.font-alt.mb-4 We protect the interest of both vendors and customers
                 .d-flex.flex-column.flex-lg-row.align-items-center.justify-content-center
-                    a.me-lg-3.mb-4.mb-lg-0(href='#!')
-                        img.app-badge(src='assets/img/google-play-badge.svg', alt='...')
-                    a(href='#!')
-                        img.app-badge(src='assets/img/app-store-badge.svg', alt='...')
 
         // Footer
         footer.bg-black.text-center.py-5
             .container.px-5
                 .text-white-50.small
-                    .mb-2 &copy; Reelshop. All Rights Reserved.
+                    .mb-2 &copy; Firstwave. All Rights Reserved.
                     a(href='#!') Privacy
                     span.mx-1 &middot;
                     a(href='#!') Terms
