--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -127,7 +127,7 @@ html(lang='en')
                             to or a refund is only made when certain criterias tailored to the transaction are met.
                     .col-sm-8.col-md-6
                         .px-5.px-sm-0
-                            img.img-fluid.rounded-circle(src='assets/img/virtual.gif', alt='...')
+                            img.img-fluid.rounded-circle(src='assets/img/technology.gif', alt='...')
 
         // Call to action section
         section.cta
