--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Reelshop | Home
+        title First | Home
 
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
 
